--- a/mortgage-payment.html
+++ b/mortgage-payment.html
@@ -53,25 +53,6 @@
             margin-left: 4px;
         }
     </style>
-    
-    <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Mortgage Payment Calculator",
-      "description": "Calculate your monthly mortgage payment including principal, interest, taxes, insurance, PMI, and HOA dues. View complete amortization schedule.",
-      "url": "https://calcdomain.com/mortgage-payment",
-      "inLanguage": "en",
-      "author": {
-        "@type": "Person",
-        "name": "Ugo Candido"
-      },
-      "publisher": {
-        "@type": "Organization",
-        "name": "CalcDomain"
-      }
-    }
-    </script>
     <script src="search.js" defer></script>
     <style>
         .search-highlight {
@@ -124,7 +105,237 @@
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 <link rel="preload" href="/assets/js/mobile-menu.js" as="script">
 <link rel="preload" href="/assets/js/page-enhancements.js" as="script">
+<script type="application/ld+json">
+[
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "CalcDomain",
+    "url": "https://calcdomain.com",
+    "logo": "https://calcdomain.com/apple-touch-icon.png"
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "CalcDomain",
+    "url": "https://calcdomain.com",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://calcdomain.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "CalcDomain",
+        "item": "https://calcdomain.com"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Finance",
+        "item": "https://calcdomain.com/finance"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Mortgage Payment Calculator",
+        "item": "https://calcdomain.com/mortgage-payment"
+      }
+    ]
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "HowTo",
+    "name": "How to Use the Mortgage Payment Calculator",
+    "description": "Calculate your estimated monthly mortgage payment (PITI) with our simple tool.",
+    "step": [
+      {
+        "@type": "HowToStep",
+        "name": "Enter Loan Details",
+        "text": "Input the total Home Price, your Down Payment, the loan term in years (e.g., 30), and the annual Interest Rate.",
+        "url": "https://calcdomain.com/mortgage-payment#step1" 
+      },
+      {
+        "@type": "HowToStep",
+        "name": "Add Property Costs",
+        "text": "For a complete PITI estimate, enter your estimated annual Property Taxes, Home Insurance, and any PMI (Private Mortgage Insurance).",
+        "url": "https://calcdomain.com/mortgage-payment#step2"
+      },
+      {
+        "@type": "HowToStep",
+        "name": "Calculate & Review",
+        "text": "Click the 'Calculate' button to see a full breakdown of your monthly payment, including principal & interest, taxes, and insurance. You can also view the amortization schedule.",
+        "url": "https://calcdomain.com/mortgage-payment#results"
+      }
+    ],
+    "totalTime": "PT2M" 
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What is PITI?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "PITI stands for Principal, Interest, Taxes, and Insurance. These are the four main components that make up a monthly mortgage payment."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is an amortization schedule?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "An amortization schedule is a table detailing each periodic payment on a loan. It shows how much of each payment goes towards principal and how much goes towards interest, and the remaining balance after each payment."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How does my down payment affect my payment?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "A larger down payment reduces the total amount you need to borrow (the principal). This lowers your monthly mortgage payment and also reduces the total amount of interest you'll pay over the life of the loan. If you put down 20% or more, you can typically avoid paying PMI (Private Mortgage Insurance)."
+        }
+      }
+    ]
+  }
+]
+</script>
 
+
+<script type="application/ld+json">
+[
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "CalcDomain",
+    "url": "https://calcdomain.com",
+    "logo": "https://calcdomain.com/apple-touch-icon.png"
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "CalcDomain",
+    "url": "https://calcdomain.com",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://calcdomain.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "CalcDomain",
+        "item": "https://calcdomain.com"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Finance",
+        "item": "https://calcdomain.com/finance"
+      },
+      {
+        "@type": "ListItem",
+        "position": 3,
+        "name": "Mortgage Payment Calculator",
+        "item": "https://calcdomain.com/mortgage-payment"
+      }
+    ]
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "HowTo",
+    "name": "How to Use the Mortgage Payment Calculator",
+    "description": "Calculate your estimated monthly mortgage payment (PITI) with our simple tool.",
+    "step": [
+      {
+        "@type": "HowToStep",
+        "name": "Enter Loan Details",
+        "text": "Input the total Home Price, your Down Payment, the loan term in years (e.g., 30), and the annual Interest Rate.",
+        "url": "https://calcdomain.com/mortgage-payment#calculator-ui"
+      },
+      {
+        "@type": "HowToStep",
+        "name": "Add Property Costs",
+        "text": "For a complete PITI estimate, enter your estimated annual Property Taxes, Home Insurance, and any PMI (Private Mortgage Insurance).",
+        "url": "https://calcdomain.com/mortgage-payment#calculator-ui"
+      },
+      {
+        "@type": "HowToStep",
+        "name": "Calculate & Review",
+        "text": "Click the 'Calculate' button to see a full breakdown of your monthly payment, including principal & interest, taxes, and insurance. You can also view the amortization schedule.",
+        "url": "https://calcdomain.com/mortgage-payment#results"
+      }
+    ]
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What inputs are required to calculate my mortgage payment?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "At minimum, you need the loan amount, annual interest rate, and term in years. Property taxes, insurance, PMI, HOA, and extra principal are optional but help estimate your complete housing payment."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How accurate are these results?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Results use standard amortization formulas and your inputs. Real-world figures may vary slightly due to escrow adjustments, changing tax/insurance rates, and lender-specific practices. Always verify with your lender."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is included in a monthly mortgage payment?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "A typical payment includes Principal, Interest, Taxes, and Insurance (PITI). The calculator estimates P&I, then adds taxes, insurance, PMI, and HOA if you provide those amounts."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "When does PMI drop off?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "PMI typically ends when you reach 20% equity based on current guidelines. This calculator treats PMI as a fixed monthly input. Contact your lender for specific removal requirements."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Why is total interest so high early on?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Amortized loans allocate more interest upfront because it's calculated on the outstanding principal. As principal decreases over time, the interest portion shrinks and principal portion grows."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How can I lower my monthly payment?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Options include making a larger down payment, choosing a longer loan term (e.g., 30 vs 15 years), improving your credit score for a better rate, or buying a less expensive home."
+        }
+      }
+    ]
+  }
+]
+</script>
 </head>
 <body class="bg-gray-50 text-gray-800">
 
