--- a/finance.html
+++ b/finance.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://calcdomain.com/finance">
-
-
-
-
-
- 
+<link rel="canonical" href="https://calcdomain.com/finance"> 
 <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
 <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 <link rel="shortcut icon" href="/favicon.ico" />
@@ -17,7 +11,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Finance Calculators - Free Tools for Professional Calculations</title>
     <meta name="description" content="Master your financial decisions with our comprehensive suite of calculators. From mortgage payments and loan analysis to investment planning and retirement strategies, these tools help you make informed choices about your money.">
-    
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
@@ -40,7 +33,46 @@
 <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
 <link rel="preload" href="/assets/js/mobile-menu.js" as="script">
 <link rel="preload" href="/assets/js/page-enhancements.js" as="script">
-
+<script type="application/ld+json">
+[
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "CalcDomain",
+    "url": "https://calcdomain.com",
+    "logo": "https://calcdomain.com/apple-touch-icon.png"
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "CalcDomain",
+    "url": "https://calcdomain.com",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://calcdomain.com/search?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  },
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "CalcDomain",
+        "item": "https://calcdomain.com"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Finance",
+        "item": "https://calcdomain.com/finance"
+      }
+    ]
+  }
+]
+</script>
 </head>
 <body class="bg-gray-50 text-gray-800">
 
