--- a/health-fitness.html
+++ b/health-fitness.html
@@ -396,4 +396,7 @@
     </footer>
 
 </body>
+
+<script src="/assets/js/mobile-menu.js" defer></script>
+<script src="/assets/js/page-enhancements.js" defer></script>
 </html>
