--- a/template_perfetti/header_perfetto.html
+++ b/template_perfetti/header_perfetto.html
@@ -21,7 +21,7 @@
 
       <div class="hidden md:flex items-center space-x-6">
         <a href="https://calcdomain.com/search" class="text-gray-700 hover:text-blue-600 transition-colors">Advanced Search</a>
-        <a href="https://calcdomain.com/categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
+        <a href="https://calcdomain.com/#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
       </div>
 
       <button
