--- a/sito_modificato/function-calculator.html
+++ b/sito_modificato/function-calculator.html
@@ -281,7 +281,7 @@
             <h2 class="text-lg font-semibold mb-3">Related math tools</h2>
             <ul class="space-y-2 text-sm">
               <li><a href="https://calcdomain.com/graphing-calculator" class="text-blue-600 hover:underline">Graphing Calculator</a></li>
-              <li><a href="https://calcdomain.com/derivative-calculator" class="text-blue-600 hover:underline">Derivative Calculator</a></li>
+              <li><a href="https://calcdomain.com/derivative" class="text-blue-600 hover:underline">Derivative Calculator</a></li>
               <li><a href="https://calcdomain.com/integral-calculator" class="text-blue-600 hover:underline">Integral Calculator</a></li>
               <li><a href="https://calcdomain.com/limit-calculator" class="text-blue-600 hover:underline">Limit Calculator</a></li>
               <li><a href="https://calcdomain.com/quadratic-function-calculator" class="text-blue-600 hover:underline">Quadratic Function Calculator</a></li>
