--- a/sito_modificato/regular-ngon-calculator.html
+++ b/sito_modificato/regular-ngon-calculator.html
@@ -43,6 +43,18 @@
             border-color: #3b82f6;
             box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.2);
         }
+        .input-group {
+            display: flex;
+            gap: 8px;
+        }
+        .input-unit-select {
+            flex-shrink: 0;
+            width: 100px; 
+            padding: 0.5rem;
+            border: 1px solid #d1d5db;
+            border-radius: 0.375rem;
+            font-size: 1.125rem;
+        }
         .btn-primary {
             display: inline-block;
             background-color: #3b82f6;
@@ -76,6 +88,32 @@
             font-size: 2.5rem;
             font-weight: 700;
             color: #1f2937;
+        }
+        .tab-button {
+            padding: 0.75rem 1.25rem;
+            font-size: 0.9rem;
+            font-weight: 600;
+            border-radius: 0.5rem 0.5rem 0 0;
+            cursor: pointer;
+            background-color: #f3f4f6;
+            border: 1px solid #d1d5db;
+            border-bottom: 0;
+            color: #4b5563;
+            margin-bottom: -1px;
+        }
+        .tab-button.active {
+            background-color: #ffffff;
+            color: #3b82f6;
+            border-bottom: 1px solid #ffffff;
+        }
+        .tab-panel {
+            display: none;
+            border: 1px solid #d1d5db;
+            border-radius: 0 0.5rem 0.5rem 0.5rem;
+            padding: 1.5rem;
+        }
+        .tab-panel.active {
+            display: block;
         }
     </style>
     
@@ -400,9 +438,9 @@
                   </div>
                 </div>
                 <div>
-                  <h3 class="font-semibold cursor-pointer" data-faq-toggle>Is there a relationship between the internal and exterior angles?</h3>
+                  <h3 class="font-semibold cursor-pointer" data-faq-toggle>What is the easiest formula for the area of a regular N-gon?</h3>
                   <div class="faq-content hidden mt-2 pl-4">
-                    <p>Yes. The internal angle ($\theta_i$) and the exterior angle ($\theta_e$) are supplementary, meaning they add up to $180^\circ$. Additionally, the exterior angle is equal to the central angle: $\theta_e = \theta_c = 360^\circ / n$.</p>
+                    <p>The easiest conceptual formula is $\\text{Area} = \frac{1}{2} a P$, where $a$ is the apothem and $P$ is the perimeter ($P = n \cdot s$). The most direct formula using only the side length $s$ and number of sides $n$ is: $\\text{Area} = \frac{1}{4} n s^2 \cot(\\frac{180^\circ}{n})$.</p>
                   </div>
                 </div>
               </div>
@@ -438,7 +476,7 @@
                     errorMessage.textContent = `Error: ${message}`;
                     resultsContainer.classList.add('hidden');
                 }
-
+                
                 // --- Core Solver Logic ---
                 function solvePolygon(n, s, a, R) {
                     const centralAngleHalf = 180 / n;
@@ -544,6 +582,10 @@
                 });
 
                 // Initial calculation (for example values)
+                document.getElementById('input-n').value = 6;
+                document.getElementById('input-s').value = 10;
+                document.getElementById('input-a').value = '';
+                document.getElementById('input-r').value = '';
                 calculateBtn.click();
             </script>
 
@@ -565,7 +607,7 @@
                 </div>
                  <div class="p-3 bg-green-50 rounded-lg">
                     <p class="text-sm text-gray-600">Apothem (from Side $s$)</p>
-                    <p class="text-2xl text-green-600">$$a = \frac{s}{2 \tan\left(\frac{180^\circ}{n}\right)}$$</p>
+                    <p class="text-xl text-green-600">$$a = \frac{s}{2 \tan\left(\frac{180^\circ}{n}\right)}$$</p>
                 </div>
               </div>
             </div>
