--- a/sito_modificato/tangent-line-calculator.html
+++ b/sito_modificato/tangent-line-calculator.html
@@ -249,7 +249,7 @@
             <h2 class="text-lg font-semibold mb-3">Related calculus tools</h2>
             <ul class="space-y-2 text-sm">
               <li><a href="https://calcdomain.com/normal-line-calculator" class="text-blue-600 hover:underline">Normal Line Calculator</a></li>
-              <li><a href="https://calcdomain.com/derivative-calculator" class="text-blue-600 hover:underline">Derivative Calculator</a></li>
+              <li><a href="https://calcdomain.com/derivative" class="text-blue-600 hover:underline">Derivative Calculator</a></li>
               <li><a href="https://calcdomain.com/graphing-calculator" class="text-blue-600 hover:underline">Graphing Calculator</a></li>
               <li><a href="https://calcdomain.com/slope-calculator" class="text-blue-600 hover:underline">Slope Calculator</a></li>
               <li><a href="https://calcdomain.com/function-calculator" class="text-blue-600 hover:underline">Function Calculator</a></li>
