--- a/sito_modificato/graphing-calculator.html
+++ b/sito_modificato/graphing-calculator.html
@@ -262,7 +262,7 @@
             <ul class="space-y-2 text-sm">
               <li><a href="https://calcdomain.com/function-calculator" class="text-blue-600 hover:underline">Function Calculator</a></li>
               <li><a href="https://calcdomain.com/quadratic-function-calculator" class="text-blue-600 hover:underline">Quadratic Grapher</a></li>
-              <li><a href="https://calcdomain.com/derivative-calculator" class="text-blue-600 hover:underline">Derivative Calculator</a></li>
+              <li><a href="https://calcdomain.com/derivative" class="text-blue-600 hover:underline">Derivative Calculator</a></li>
               <li><a href="https://calcdomain.com/integral-calculator" class="text-blue-600 hover:underline">Integral Calculator</a></li>
               <li><a href="https://calcdomain.com/limit-calculator" class="text-blue-600 hover:underline">Limit Calculator</a></li>
               <li><a href="https://calcdomain.com/polynomial-calculator" class="text-blue-600 hover:underline">Polynomial Calculator</a></li>
