--- a/sito_modificato/normal-line-calculator.html
+++ b/sito_modificato/normal-line-calculator.html
@@ -250,7 +250,7 @@
             <h2 class="text-lg font-semibold mb-3">Related calculus tools</h2>
             <ul class="space-y-2 text-sm">
               <li><a href="https://calcdomain.com/tangent-line-calculator" class="text-blue-600 hover:underline">Tangent Line Calculator</a></li>
-              <li><a href="https://calcdomain.com/derivative-calculator" class="text-blue-600 hover:underline">Derivative Calculator</a></li>
+              <li><a href="https://calcdomain.com/derivative" class="text-blue-600 hover:underline">Derivative Calculator</a></li>
               <li><a href="https://calcdomain.com/slope-calculator" class="text-blue-600 hover:underline">Slope Calculator</a></li>
               <li><a href="https://calcdomain.com/implicit-differentiation" class="text-blue-600 hover:underline">Implicit Differentiation</a></li>
               <li><a href="https://calcdomain.com/graphing-calculator" class="text-blue-600 hover:underline">Graphing Calculator</a></li>
