--- a/sito_originale/integral.html
+++ b/sito_originale/integral.html
@@ -416,7 +416,7 @@
                                                                                                                                                                 </section>
                                                                                                                                                                 <section class="content-section">
                                                                                                                                                                 <h2>Data Source and Methodology</h2>
-                                                                                                                                                                <p>Tutti i calcoli si basano rigorosamente sulle formule e sui dati forniti da <a href="https://www.derivative-calculator.net/">Derivative Calculator</a>.</p>
+                                                                                                                                                                <p>Tutti i calcoli si basano rigorosamente sulle formule e sui dati forniti da <a href="https://www.derivative.net/">Derivative Calculator</a>.</p>
                                                                                                                                                                 <h2>The Formula Explained</h2>
                                                                                                                                                                 <div class="formula-box">
                                                                                                                                                                                 \(\int f(x) \, dx\)
