--- a/sito_modificato/arc-length-calculator.html
+++ b/sito_modificato/arc-length-calculator.html
@@ -425,7 +425,7 @@
                             throw new Error('Radius must be greater than zero.');
                         }
                         if (unit === 'degrees' && (angleRaw > 360)) {
-                             // Allow >360 but give a warning or note that it represents multiple full circles.
+                             // Allow >360 but note that it represents multiple full circles.
                         }
 
                         errorMessage.textContent = '';
