--- a/sito_modificato/dodecagon-calculator.html
+++ b/sito_modificato/dodecagon-calculator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Dodecagon Calculator: Area, Perimeter, Apothem & Radius (Regular 12-gon) | CalcDomain</title>
-    <meta name="description" content="Free dodecagon calculator for regular 12-sided polygons. Enter side, radius, apothem, perimeter or area and get every property: area, perimeter, apothem, circumradius, diameter and even dodecagonal prism volume. Includes exact formulas.">
+    <meta name="description" content="Free dodecagon calculator for regular 12-sided polygons. Start from side, perimeter, apothem, circumradius, or area and get every property: area, perimeter, apothem, circumradius, diameter, and prism volume. Includes exact formulas and FAQs.">
     <link rel="canonical" href="https://calcdomain.com/dodecagon-calculator">
 
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
@@ -72,7 +72,7 @@
               "name": "What is a dodecagon?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "A dodecagon is a 12-sided polygon. A regular dodecagon has all sides and all angles equal, and this calculator is built for that regular case."
+                "text": "A dodecagon is a 12-sided polygon. This calculator assumes a regular dodecagon, meaning all sides and angles are equal."
               }
             },
             {
@@ -80,26 +80,26 @@
               "name": "How do you find the area of a regular dodecagon?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "For side length a, the exact area formula is A = 3(2 + √3) · a². Our calculator uses the general regular polygon formula A = (n · a²)/(4·tan(π/n)) with n = 12."
+                "text": "For side length a, the exact area formula is A = 3(2 + √3) · a². This is equivalent to the general regular polygon formula A = (n · a²)/(4·tan(π/n)) with n = 12."
               }
             },
             {
               "@type": "Question",
-              "name": "Can I start from the perimeter or radius instead of the side?",
+              "name": "Can I calculate from apothem, radius, or perimeter instead of the side?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "Yes. You can enter perimeter, circumradius, apothem, or area and the tool will convert it to the side length and calculate everything else."
+                "text": "Yes. You can start from circumradius, apothem, perimeter, or even area — the calculator converts it to the side length internally and then computes all other properties."
               }
             }
           ]
         },
         {
           "@type": "HowTo",
-          "name": "How to calculate the area of a dodecagon from the side length",
+          "name": "How to calculate the dimensions of a regular dodecagon",
           "step": [
-            { "@type": "HowToStep", "text": "Measure the side length a." },
-            { "@type": "HowToStep", "text": "Use the formula A = 3(2 + √3) · a²." },
-            { "@type": "HowToStep", "text": "Alternatively, enter a in this calculator and it will compute perimeter, apothem, radius, and even prism volume if you add height." }
+            { "@type": "HowToStep", "text": "Choose the known parameter: side, apothem, circumradius, perimeter, or area." },
+            { "@type": "HowToStep", "text": "Enter the value into the corresponding tab of the calculator." },
+            { "@type": "HowToStep", "text": "Click Calculate to get area, perimeter, apothem, circumradius, diameter, and optional prism volume." }
           ]
         }
       ]
@@ -163,7 +163,7 @@
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h1 class="text-2xl font-bold mb-2">Dodecagon Calculator (Regular 12-gon)</h1>
             <p class="text-gray-600 mb-6">
-              Compute every property of a regular dodecagon: area, perimeter, apothem (inradius), circumradius, vertex-to-vertex diameter, and even the volume of a dodecagonal prism. Start from whatever you know.
+              Compute every property of a regular 12-sided polygon in one place. Enter side length, perimeter, apothem, circumradius, or even area — the tool will find the rest, including optional dodecagonal prism volume.
             </p>
 
             <div class="flex flex-wrap gap-2 mb-5">
@@ -185,7 +185,7 @@
                 <div>
                   <label class="block label-sm text-gray-700 mb-1" for="side-h">Prism height (optional)</label>
                   <input id="side-h" type="number" step="0.01" class="w-full border-gray-300 rounded-md" placeholder="e.g. 10">
-                  <p class="mini-hint">for dodecagonal prism volume</p>
+                  <p class="mini-hint">for volume</p>
                 </div>
               </div>
             </div>
@@ -241,7 +241,7 @@
                 <div>
                   <label class="block label-sm text-gray-700 mb-1" for="area-A">Area (A)</label>
                   <input id="area-A" type="number" value="279.0" step="0.001" class="w-full border-gray-300 rounded-md">
-                  <p class="mini-hint">for regular dodecagon</p>
+                  <p class="mini-hint">regular dodecagon</p>
                 </div>
                 <div>
                   <label class="block label-sm text-gray-700 mb-1" for="area-h">Prism height (optional)</label>
@@ -275,13 +275,12 @@
 
             <h2>Dodecagon formulas used</h2>
             <div class="formula-box text-sm">
-              <p><strong>n = 12</strong> (regular dodecagon)</p>
+              <p><strong>n = 12</strong> for a regular dodecagon.</p>
               <p>Perimeter: \(P = 12a\)</p>
-              <p>Area (exact): \(A = 3(2 + \sqrt{3}) \, a^2\)</p>
-              <p>General regular polygon form: \(A = \frac{n a^2}{4 \tan(\pi/n)}\) → for \(n=12\): \(A = \frac{12 a^2}{4 \tan(\pi/12)} = \frac{3 a^2}{\tan(15^\circ)} = 3(2+\sqrt{3})a^2\)</p>
+              <p>Area (general regular polygon): \(A = \frac{n a^2}{4 \tan(\pi/n)}\) → for \(n = 12\): \(A = \frac{12 a^2}{4 \tan(\pi/12)} = 3(2+\sqrt{3})a^2\)</p>
               <p>Apothem: \(r = \frac{a}{2 \tan(\pi/12)}\)</p>
               <p>Circumradius: \(R = \frac{a}{2 \sin(\pi/12)}\)</p>
-              <p>Diameter (vertex-to-vertex): \(D = 2R\)</p>
+              <p>Vertex-to-vertex diameter: \(D = 2R\)</p>
               <p>Dodecagonal prism volume: \(V = A \cdot h\)</p>
             </div>
 
@@ -289,15 +288,15 @@
             <div class="space-y-3 text-sm">
               <details class="border border-gray-200 rounded-md p-3">
                 <summary class="cursor-pointer font-medium text-gray-800">Is this for regular or irregular dodecagons?</summary>
-                <p class="mt-2 text-gray-600">This tool is for <strong>regular</strong> dodecagons (all sides equal). For arbitrary 12-gons with different vertices, use the Irregular Polygon Calculator.</p>
+                <p class="mt-2 text-gray-600">This calculator is for <strong>regular</strong> dodecagons (all sides equal). For arbitrary polygons, try the Irregular Polygon Calculator.</p>
               </details>
               <details class="border border-gray-200 rounded-md p-3">
-                <summary class="cursor-pointer font-medium text-gray-800">Can I use flat-to-flat instead?</summary>
-                <p class="mt-2 text-gray-600">For a dodecagon, “flat-to-flat” isn’t as standard as for hexagons. Use apothem (distance from center to a side) — it’s effectively half of flat-to-flat.</p>
+                <summary class="cursor-pointer font-medium text-gray-800">Can I get side length from area?</summary>
+                <p class="mt-2 text-gray-600">Yes. We invert the exact formula \(A = 3(2+\sqrt{3})a^2\) to recover the side and derive everything else.</p>
               </details>
               <details class="border border-gray-200 rounded-md p-3">
-                <summary class="cursor-pointer font-medium text-gray-800">What’s special about 12 sides?</summary>
-                <p class="mt-2 text-gray-600">12 = 3 × 4, so a dodecagon can tile nicely and it admits exact radical formulas, which is why you see the expression 3(2+√3)a².</p>
+                <summary class="cursor-pointer font-medium text-gray-800">What’s the interior angle of a dodecagon?</summary>
+                <p class="mt-2 text-gray-600">A regular dodecagon has interior angles of 150°. This doesn’t affect area/perimeter directly, but it’s useful for design/layout.</p>
               </details>
             </div>
 
@@ -312,12 +311,12 @@
               <li><a href="https://calcdomain.com/irregular-polygon-calculator" class="text-blue-600 hover:underline">Irregular Polygon Area</a></li>
               <li><a href="https://calcdomain.com/hexagon-calculator" class="text-blue-600 hover:underline">Hexagon Calculator</a></li>
               <li><a href="https://calcdomain.com/circle-calculator" class="text-blue-600 hover:underline">Circle Calculator</a></li>
-              <li><a href="https://calcdomain.com/geometry-2d-calculator" class="text-blue-600 hover:underline">2D Geometry</a></li>
+              <li><a href="https://calcdomain.com/geometry-2d-calculator" class="text-blue-600 hover:underline">2D Geometry Suite</a></li>
             </ul>
           </div>
           <div class="bg-white p-4 rounded-lg shadow-md">
             <h2 class="text-lg font-semibold mb-3">Tip</h2>
-            <p class="text-sm text-gray-600">Use the prism height field if you need material volume for a 12-sided column, tube, or 3D-printed part.</p>
+            <p class="text-sm text-gray-600">Set a prism height to turn any 2D dodecagon into a 3D volume — handy for columns, machining, or 3D printing estimates.</p>
           </div>
         </aside>
 
@@ -358,7 +357,7 @@
               <li><a href="https://calcdomain.com/contact" class="text-gray-400 hover:text-white">Contact</a></li>
               <li><a href="https://calcdomain.com/privacy" class="text-gray-400 hover:text-white">Privacy Policy</a></li>
               <li><a href="https://calcdomain.com/terms" class="text-gray-400 hover:text-white">Terms of Service</a></li>
-              <li><a href="https://calcdomain.com/sitemap.xml" class="text-gray-400 hover:text-white">Site Map</a></li>
+              <li><a href="https://calcdomain.com/sitemap" class="text-gray-400 hover:text-white">Site Map</a></li>
             </ul>
           </div>
         </div>
@@ -414,7 +413,6 @@
         return Math.round((x + Number.EPSILON) * 10000) / 10000;
       }
 
-      // n=12 constants via JS
       const N = 12;
       const angle = Math.PI / N; // pi/12
 
@@ -429,7 +427,6 @@
         const R = parseFloat(document.getElementById('circum-R').value);
         const h = parseFloat(document.getElementById('circum-h').value);
         if (isNaN(R) || R <= 0) return { error: 'Enter a valid circumradius.' };
-        // a = 2 R sin(pi/12)
         const a = 2 * R * Math.sin(angle);
         return { a, h: isNaN(h) ? null : h };
       }
@@ -438,7 +435,6 @@
         const r = parseFloat(document.getElementById('apo-r').value);
         const h = parseFloat(document.getElementById('apo-h').value);
         if (isNaN(r) || r <= 0) return { error: 'Enter a valid apothem.' };
-        // r = a / (2 tan(pi/12)) -> a = 2 r tan(pi/12)
         const a = 2 * r * Math.tan(angle);
         return { a, h: isNaN(h) ? null : h };
       }
@@ -455,7 +451,6 @@
         const A = parseFloat(document.getElementById('area-A').value);
         const h = parseFloat(document.getElementById('area-h').value);
         if (isNaN(A) || A <= 0) return { error: 'Enter a valid area.' };
-        // A = 3(2+√3)a² -> a = sqrt(A / (3(2+√3)))
         const denom = 3 * (2 + Math.sqrt(3));
         const a = Math.sqrt(A / denom);
         return { a, h: isNaN(h) ? null : h };
@@ -490,7 +485,6 @@
 
         const a = res.a;
         const P = N * a;
-        // area using general formula
         const A = (N * a * a) / (4 * Math.tan(angle));
         const r = a / (2 * Math.tan(angle));
         const R = a / (2 * Math.sin(angle));
