--- a/sito_modificato/rectangle-area-calculator.html
+++ b/sito_modificato/rectangle-area-calculator.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Rectangle Area Calculator: Length, Width, Perimeter, Diagonal | CalcDomain</title>
-    <meta name="description" content="Rectangle area calculator that finds area, perimeter, diagonal, and aspect ratio from length & width or from perimeter/diagonal. Includes unit selector, square detection, and formulas.">
+    <title>Rectangle Area Calculator: Length, Width, Perimeter & Diagonal | CalcDomain</title>
+    <meta name="description" content="Free rectangle area calculator. Enter length and width, or work backwards from perimeter or diagonal to find area, perimeter, diagonal, aspect ratio and optional cost. Includes formulas and FAQs.">
     <link rel="canonical" href="https://calcdomain.com/rectangle-area-calculator">
 
     <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
@@ -27,7 +27,7 @@
         .prose ul, .prose ol { margin-left: 1.5rem; margin-bottom: 1rem; }
         .prose li { margin-bottom: 0.5rem; }
         .formula-box { background: #f3f4f6; border: 1px solid #d1d5db; border-radius: 8px; padding: 1rem; overflow-x: auto; margin: 1rem 0; }
-        .label-sm { font-size: 0.7rem; text-transform: uppercase; letter-spacing: 0.04em; }
+        .label-sm { font-size: 0.7rem; text-transform: uppercase; letter-spacing: .04em; }
         .mini-hint { font-size: 0.68rem; color: #6b7280; }
         .tab-active { background: #eff6ff; border-color: #bfdbfe; color: #1d4ed8; }
     </style>
@@ -72,7 +72,7 @@
               "name": "How do you find the area of a rectangle?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "Multiply the length by the width: A = L × W. Our calculator also supports working backwards from perimeter or diagonal."
+                "text": "Use the basic formula A = length × width. If you only know the perimeter or diagonal, this calculator can work backwards to find the missing side and then the area."
               }
             },
             {
@@ -80,27 +80,27 @@
               "name": "Can I change units?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "Yes, select cm, m, mm, inch, foot, or yard. Area is shown in the squared version of the selected unit."
+                "text": "Yes, choose cm, m, mm, inch, foot, or yard. The area will be shown in the squared version of that unit."
               }
             },
             {
               "@type": "Question",
-              "name": "How do I know if it is a square?",
+              "name": "How can I estimate material cost?",
               "acceptedAnswer": {
                 "@type": "Answer",
-                "text": "If the length equals the width, the calculator will display a note that this rectangle is actually a square."
+                "text": "Enter your cost per unit² (e.g. per m² or ft²) and the calculator will multiply it by the area."
               }
             }
           ]
         },
         {
           "@type": "HowTo",
-          "name": "How to calculate the area of a rectangle",
+          "name": "How to calculate rectangle area",
           "step": [
             { "@type": "HowToStep", "text": "Measure the length of the rectangle." },
             { "@type": "HowToStep", "text": "Measure the width of the rectangle." },
-            { "@type": "HowToStep", "text": "Multiply length by width to get the area." },
-            { "@type": "HowToStep", "text": "Optionally, enter a material cost per m² or ft² to estimate total cost." }
+            { "@type": "HowToStep", "text": "Multiply length × width to get area." },
+            { "@type": "HowToStep", "text": "Optionally, multiply area by material cost per unit² to get total cost." }
           ]
         }
       ]
@@ -125,7 +125,7 @@
           </div>
           <div class="hidden md:flex items-center space-x-6">
             <a href="https://calcdomain.com/search" class="text-gray-700 hover:text-blue-600 transition-colors">Advanced Search</a>
-            <a href="https://calcdomain.com/#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
+            <a href="https://calcdomain.com/categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
           </div>
           <button id="mobile-menu-toggle" class="md:hidden p-2" aria-controls="mobile-menu" aria-expanded="false" aria-label="Open menu" type="button">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
@@ -135,12 +135,12 @@
           <div class="mb-4">
             <div class="relative">
               <input type="search" id="mobile-search-input" placeholder="Search calculators..." class="w-full py-3 px-4 pr-10 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500" />
-              <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path></svg>
+              <svg class="w-5 h-5 absolute right-4 top-1/2 -translate-y-1/2 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 0 0114 0z"></path></svg>
             </div>
           </div>
           <div class="space-y-2">
             <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-            <a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+            <a href="https://calcdomain.com/categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
           </div>
         </nav>
       </nav>
@@ -164,7 +164,7 @@
           <div class="bg-white p-6 rounded-lg shadow-md">
             <h1 class="text-2xl font-bold mb-2">Rectangle Area Calculator</h1>
             <p class="text-gray-600 mb-6">
-              Quickly find the area, perimeter, diagonal, and aspect ratio of a rectangle. You can start from <strong>length & width</strong>, or work backwards from <strong>perimeter</strong> or <strong>diagonal</strong>. Includes unit conversion and optional cost estimation.
+              Compute rectangle area, perimeter, diagonal, aspect ratio, and an optional material cost. Start from length–width, perimeter–side, or diagonal–side.
             </p>
 
             <div class="flex flex-wrap gap-2 mb-6">
@@ -173,7 +173,7 @@
               <button id="tab-diag" class="px-4 py-2 border rounded-md text-sm" type="button">Diagonal + Side</button>
             </div>
 
-            <!-- Panel Length-Width -->
+            <!-- Panel 1 -->
             <div id="panel-lw">
               <div class="grid md:grid-cols-4 gap-4 mb-4">
                 <div>
@@ -182,45 +182,45 @@
                 </div>
                 <div>
                   <label class="block label-sm text-gray-700 mb-1" for="lw-width">Width (W)</label>
-                  <input id="lw-width" type="number" value="6" step="0.01" class="w-full border-gray-300 rounded-md">
+                  <input id="lw-width" type="number" value="5" step="0.01" class="w-full border-gray-300 rounded-md">
                 </div>
                 <div>
                   <label class="block label-sm text-gray-700 mb-1" for="lw-unit">Unit</label>
                   <select id="lw-unit" class="w-full border-gray-300 rounded-md">
-                    <option value="m">m</option>
                     <option value="cm" selected>cm</option>
+                    <option value="m">m</option>
                     <option value="mm">mm</option>
                     <option value="in">inch</option>
                     <option value="ft">ft</option>
                     <option value="yd">yd</option>
                   </select>
-                  <p class="mini-hint">length & width use this</p>
+                  <p class="mini-hint">L & W in this unit</p>
                 </div>
                 <div>
                   <label class="block label-sm text-gray-700 mb-1" for="lw-cost">Cost per unit² (opt.)</label>
                   <input id="lw-cost" type="number" step="0.01" class="w-full border-gray-300 rounded-md" placeholder="e.g. 12.5">
-                  <p class="mini-hint">for flooring/painting</p>
                 </div>
               </div>
             </div>
 
-            <!-- Panel Perimeter + side -->
+            <!-- Panel 2 -->
             <div id="panel-perim" class="hidden">
               <div class="grid md:grid-cols-4 gap-4 mb-4">
                 <div>
                   <label class="block label-sm text-gray-700 mb-1" for="p-perim">Perimeter (P)</label>
                   <input id="p-perim" type="number" value="32" step="0.01" class="w-full border-gray-300 rounded-md">
+                  <p class="mini-hint">P = 2(L + W)</p>
                 </div>
                 <div>
                   <label class="block label-sm text-gray-700 mb-1" for="p-side">Known side</label>
-                  <input id="p-side" type="number" value="8" step="0.01" class="w-full border-gray-300 rounded-md">
+                  <input id="p-side" type="number" value="10" step="0.01" class="w-full border-gray-300 rounded-md">
                   <p class="mini-hint">other side is derived</p>
                 </div>
                 <div>
                   <label class="block label-sm text-gray-700 mb-1" for="p-unit">Unit</label>
                   <select id="p-unit" class="w-full border-gray-300 rounded-md">
-                    <option value="m">m</option>
                     <option value="cm" selected>cm</option>
+                    <option value="m">m</option>
                     <option value="mm">mm</option>
                     <option value="in">inch</option>
                     <option value="ft">ft</option>
@@ -234,7 +234,7 @@
               </div>
             </div>
 
-            <!-- Panel Diagonal + side -->
+            <!-- Panel 3 -->
             <div id="panel-diag" class="hidden">
               <div class="grid md:grid-cols-4 gap-4 mb-4">
                 <div>
@@ -243,14 +243,14 @@
                 </div>
                 <div>
                   <label class="block label-sm text-gray-700 mb-1" for="d-side">Known side</label>
-                  <input id="d-side" type="number" value="5" step="0.01" class="w-full border-gray-300 rounded-md">
-                  <p class="mini-hint">must be < diagonal</p>
+                  <input id="d-side" type="number" value="6" step="0.01" class="w-full border-gray-300 rounded-md">
+                  <p class="mini-hint">must be &lt; diagonal</p>
                 </div>
                 <div>
                   <label class="block label-sm text-gray-700 mb-1" for="d-unit">Unit</label>
                   <select id="d-unit" class="w-full border-gray-300 rounded-md">
-                    <option value="m">m</option>
                     <option value="cm" selected>cm</option>
+                    <option value="m">m</option>
                     <option value="mm">mm</option>
                     <option value="in">inch</option>
                     <option value="ft">ft</option>
@@ -292,23 +292,23 @@
               <p><strong>Area:</strong> \( A = L \times W \)</p>
               <p><strong>Perimeter:</strong> \( P = 2(L + W) \)</p>
               <p><strong>Diagonal:</strong> \( d = \sqrt{L^2 + W^2} \)</p>
-              <p><strong>From perimeter & one side:</strong> if \( P \) and \( L \) are known, then \( W = \frac{P}{2} - L \)</p>
-              <p><strong>From diagonal & one side:</strong> if \( d \) and \( L \) are known, then \( W = \sqrt{d^2 - L^2} \)</p>
+              <p><strong>From perimeter + one side:</strong> \( W = \frac{P}{2} - L \)</p>
+              <p><strong>From diagonal + one side:</strong> \( W = \sqrt{d^2 - L^2} \)</p>
             </div>
 
             <h2>FAQs</h2>
-            <div class="space-y-3 text-sm">
+            <div class="space-y-3 text-sm mb-2">
               <details class="border border-gray-200 rounded-md p-3">
-                <summary class="cursor-pointer font-medium text-gray-800">Can I use feet and inches?</summary>
-                <p class="mt-2 text-gray-600">Yes. Pick “inch” for pure inches, or convert mixed dimensions to decimal feet/inches before entering.</p>
+                <summary class="cursor-pointer font-medium text-gray-800">Can I use different units for length and width?</summary>
+                <p class="mt-2 text-gray-600">No — convert to a single unit first (e.g. all in inches) so the area can be computed correctly.</p>
               </details>
               <details class="border border-gray-200 rounded-md p-3">
-                <summary class="cursor-pointer font-medium text-gray-800">Why does it say it’s a square?</summary>
-                <p class="mt-2 text-gray-600">Because your length and width are equal (within a small tolerance), so your rectangle is a special case: a square.</p>
+                <summary class="cursor-pointer font-medium text-gray-800">What if length equals width?</summary>
+                <p class="mt-2 text-gray-600">Then your rectangle is a square. The calculator will notice and tell you.</p>
               </details>
               <details class="border border-gray-200 rounded-md p-3">
-                <summary class="cursor-pointer font-medium text-gray-800">Is the area always in the square of the unit?</summary>
-                <p class="mt-2 text-gray-600">Yes. If you choose cm, you get cm²; if you choose ft, you get ft².</p>
+                <summary class="cursor-pointer font-medium text-gray-800">What does cost per unit² mean?</summary>
+                <p class="mt-2 text-gray-600">If you know, for example, that flooring costs 20 €/m², enter 20 and we’ll multiply area × 20.</p>
               </details>
             </div>
 
@@ -320,15 +320,15 @@
             <h2 class="text-lg font-semibold mb-3">Related geometry tools</h2>
             <ul class="space-y-2 text-sm">
               <li><a href="https://calcdomain.com/parallelogram-calculator" class="text-blue-600 hover:underline">Parallelogram Calculator</a></li>
-              <li><a href="https://calcdomain.com/square-calculator" class="text-blue-600 hover:underline">Square Calculator</a></li>
-              <li><a href="https://calcdomain.com/area-calculator" class="text-blue-600 hover:underline">Area Calculator</a></li>
+              <li><a href="https://calcdomain.com/area-calculator" class="text-blue-600 hover:underline">Area Calculator (All Shapes)</a></li>
               <li><a href="https://calcdomain.com/triangle-calculator" class="text-blue-600 hover:underline">Triangle Calculator</a></li>
               <li><a href="https://calcdomain.com/irregular-polygon-calculator" class="text-blue-600 hover:underline">Irregular Polygon</a></li>
+              <li><a href="https://calcdomain.com/sector-area-calculator" class="text-blue-600 hover:underline">Sector Area Calculator</a></li>
             </ul>
           </div>
           <div class="bg-white p-4 rounded-lg shadow-md">
             <h2 class="text-lg font-semibold mb-3">Tip</h2>
-            <p class="text-sm text-gray-600">Use the cost field to estimate flooring, tiles, or paint when you already know the price per unit area.</p>
+            <p class="text-sm text-gray-600">Use the diagonal tab if you’re checking a layout and only have diagonal and one side — the tool will derive the other side and give you the real area.</p>
           </div>
         </aside>
 
@@ -419,7 +419,6 @@
       function round4(x) {
         return Math.round((x + Number.EPSILON) * 10000) / 10000;
       }
-
       function unitSq(u) {
         return u + '²';
       }
@@ -474,7 +473,7 @@
         ratio = L >= W ? (L / W) : (W / L);
 
         if (Math.abs(L - W) < 1e-6) {
-          note = 'This rectangle is a square (all sides equal).';
+          note = 'This rectangle is actually a square (all sides equal).';
         }
 
         resBox.classList.remove('hidden');
@@ -496,13 +495,13 @@
 
       btnClear.addEventListener('click', () => {
         document.getElementById('lw-length').value = 10;
-        document.getElementById('lw-width').value = 6;
+        document.getElementById('lw-width').value = 5;
         document.getElementById('lw-cost').value = '';
         document.getElementById('p-perim').value = 32;
-        document.getElementById('p-side').value = 8;
+        document.getElementById('p-side').value = 10;
         document.getElementById('p-cost').value = '';
         document.getElementById('d-diag').value = 12;
-        document.getElementById('d-side').value = 5;
+        document.getElementById('d-side').value = 6;
         document.getElementById('d-cost').value = '';
         resBox.classList.add('hidden');
       });
