--- a/sito_modificato/nm to angstrom.html
+++ b/sito_modificato/nm to angstrom.html
@@ -71,7 +71,7 @@
         "@type": "ListItem",
         "position": 3,
         "name": "Unit Conversions",
-        "item": "https://calcdomain.com/unit-conversions"
+        "item": "https://calcdomain.com/subcategories/measurement-unit-conversions"
       }
     ]
   },
@@ -195,7 +195,7 @@
     <div class="container mx-auto px-4 py-8">
       
       <nav id="breadcrumb-container" class="text-sm mb-4 text-gray-600">
-        <a href="https://calcdomain.com" class="hover:text-blue-600">Home</a> &raquo; <a href="https://calcdomain.com/math-conversions" class="hover:text-blue-600">Math & Conversions</a> &raquo; <a href="https://calcdomain.com/unit-conversions" class="hover:text-blue-600">Unit Conversions</a> &raquo; <span>Nanometers to Angstroms (nm to Å) Converter</span>
+        <a href="https://calcdomain.com" class="hover:text-blue-600">Home</a> &raquo; <a href="https://calcdomain.com/math-conversions" class="hover:text-blue-600">Math & Conversions</a> &raquo; <a href="https://calcdomain.com/subcategories/measurement-unit-conversions" class="hover:text-blue-600">Unit Conversions</a> &raquo; <span>Nanometers to Angstroms (nm to Å) Converter</span>
       </nav>
       
       <div class="flex flex-col lg:flex-row gap-8">
