--- a/sito_modificato/prism-calculator.html
+++ b/sito_modificato/prism-calculator.html
@@ -246,7 +246,7 @@
           </div>
           <div class="hidden md:flex items-center space-x-6">
             <a href="https://calcdomain.com/search" class="text-gray-700 hover:text-blue-600 transition-colors">Advanced Search</a>
-            <a href="https://calcdomain.com/#categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
+            <a href="https://calcdomain.com/categories" class="text-gray-700 hover:text-blue-600 transition-colors">Categories</a>
           </div>
           <button id="mobile-menu-toggle" class="md:hidden p-2" aria-controls="mobile-menu" aria-expanded="false" aria-label="Open menu" type="button">
             <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" aria-hidden="true"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
@@ -261,7 +261,7 @@
           </div>
           <div class="space-y-2">
             <a href="https://calcdomain.com/search" class="block py-2 text-gray-700 hover:text-blue-600">Advanced Search</a>
-            <a href="https://calcdomain.com/#categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
+            <a href="https://calcdomain.com/categories" class="block py-2 text-gray-700 hover:text-blue-600">Categories</a>
           </div>
         </nav>
       </nav>
@@ -384,7 +384,7 @@
               <p>Where $B$ is the area of the polygonal base and $L$ is the distance between the two bases.</p>
 
               <h3>2. Surface Area ($TSA$ and $LSA$)</h3>
-              <p>The lateral surface area ($LSA$) is the area of all the side faces. The total surface area ($TSA$) includes the bases.</p>
+              <p>The lateral surface area ($LSA$) is the area of all the sides, excluding the top and bottom bases. The total surface area ($TSA$) includes the bases.</p>
               <div class="formula-box">
                 <p class="text-lg font-medium">Lateral Surface Area ($LSA$):</p>
                 $$LSA = P \cdot L \quad (\text{where } P \text{ is the perimeter of the base})$$
@@ -603,6 +603,17 @@
                 document.getElementById('tri-L').value = 10;
                 document.getElementById('tri-s1').value = 5;
                 document.getElementById('tri-s2').value = 5;
+                
+                // Function to set the active tab (used to re-click the tab after initial load)
+                function setInitialTab() {
+                    if (activeCase === 'rectangular') {
+                        document.querySelector('[data-tab="rectangular"]').click();
+                    } else if (activeCase === 'triangular') {
+                        document.querySelector('[data-tab="triangular"]').click();
+                    }
+                }
+                
+                setInitialTab();
                 calculateBtn.click();
             </script>
 
