--- a/sito_modificato/algebra-calculator.html
+++ b/sito_modificato/algebra-calculator.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="canonical" href="https://calcdomain.com/algebra-calculator">
+<link rel="canonical" href="https://calcdomain.com/subcategories/core-math-algebra-calculator">
 
 
 
@@ -54,7 +54,7 @@
     "@type":"WebPage",
     "name":"Algebra Calculator",
     "description":"Evaluate, simplify, expand, factor, and solve algebra problems with clear steps.",
-    "url":"https://calcdomain.com/algebra-calculator",
+    "url":"https://calcdomain.com/subcategories/core-math-algebra-calculator",
     "inLanguage":"en",
     "author":{"@type":"Person","name":"Ugo Candido"},
     "publisher":{"@type":"Organization","name":"CalcDomain"}
@@ -87,7 +87,7 @@
       "@type": "ListItem",
       "position": 4,
       "name": "Algebra Calculator",
-      "item": "https://calcdomain.com/algebra-calculator"
+      "item": "https://calcdomain.com/subcategories/core-math-algebra-calculator"
     }
   ]
 }</script>
@@ -99,7 +99,7 @@
     "name":"Algebra Calculator",
     "applicationCategory":"EducationalApplication",
     "operatingSystem":"Web",
-    "url":"https://calcdomain.com/algebra-calculator",
+    "url":"https://calcdomain.com/subcategories/core-math-algebra-calculator",
     "offers":{"@type":"Offer","price":"0","priceCurrency":"USD"},
     "publisher":{"@type":"Organization","name":"CalcDomain"},
     "author":{"@type":"Person","name":"Ugo Candido"}
