--- a/sito_modificato/mode-calculator.html
+++ b/sito_modificato/mode-calculator.html
@@ -82,7 +82,7 @@
         "@type": "ListItem",
         "position": 3,
         "name": "Algebra",
-        "item": "https://calcdomain.com/algebra"
+        "item": "https://calcdomain.com/subcategories/core-math-algebra"
       }
     ]
   },
@@ -211,7 +211,7 @@
     <div class="container mx-auto px-4 py-8">
       
       <nav id="breadcrumb-container" class="text-sm mb-4 text-gray-600">
-        <a href="https://calcdomain.com" class="hover:text-blue-600">Home</a> &raquo; <a href="https://calcdomain.com/math-conversions" class="hover:text-blue-600">Math & Conversions</a> &raquo; <a href="https://calcdomain.com/algebra" class="hover:text-blue-600">Algebra</a> &raquo; <span>Mode Calculator</span>
+        <a href="https://calcdomain.com" class="hover:text-blue-600">Home</a> &raquo; <a href="https://calcdomain.com/math-conversions" class="hover:text-blue-600">Math & Conversions</a> &raquo; <a href="https://calcdomain.com/subcategories/core-math-algebra" class="hover:text-blue-600">Algebra</a> &raquo; <span>Mode Calculator</span>
       </nav>
       
       <div class="flex flex-col lg:flex-row gap-8">
