--- a/sito_originale/matrix.html
+++ b/sito_originale/matrix.html
@@ -135,7 +135,7 @@
   "isPartOf": {
     "@type": "CollectionPage",
     "name": "Math / Algebra",
-    "url": "https://calcdomain.com/math/algebra"
+    "url": "https://calcdomain.com/math/subcategories/core-math-algebra"
   },
   "author": {
     "@type": "Person",
